# whaleinit

./: Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  config.ron  docker-bake.hcl
.github/workflows/: ci.yaml  container.yaml  release.yaml  test.yml
example/: config.ron  prehook.sh  test.json  test.yml
examples/: nginx.toml  test.toml  test_child.sh
images/ubuntu-jammy/: Dockerfile
images/ubuntu-noble/: Dockerfile
src/: lib.rs  main.rs
test/: Dockerfile  prehook.sh  sshd.toml  test_parent.sh  whaleinit.toml
