[package]
edition = "2021"
name = "whaleinit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-rc.7", features = ["derive"]}
clap_generate = "3.0.0-rc.7"
json = "0.12.4"
kstring = "1.0.6"
liquid = "0.23.1"
maplit = "1.0.2"
once_cell = "1.9.0"
ron = "0.7.0"
serde = {version = "1.0.132", features = ["derive"]}
serde_yaml = "0.8.23"
simple_logger = "1.16.0"
