[package]
name = "whaleinit"
version = "0.0.1"
edition = "2024"

[profile.release]
strip = "symbols"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
liquid = { version = "0.26.11", features = ["liquid-lib"] }
nix = { version = "0.29", features = ["signal"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "valuable"] }
valuable = { version = "0.1.1", features = ["derive"] }
